--- a/SalasDeJuntas/packages.config
+++ b/SalasDeJuntas/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Nancy" version="0.21.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Aspnet" version="0.21.1" targetFramework="net40" />
+  <package id="Nancy.Serialization.ServiceStack" version="0.21.1" targetFramework="net40" />
   <package id="Nancy.Viewengines.Razor" version="0.21.1" targetFramework="net40" />
+  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net40" />
   <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net40" />
 </packages>
