--- a/SalasDeJuntas/SalasDeJuntas.csproj
+++ b/SalasDeJuntas/SalasDeJuntas.csproj
@@ -71,12 +71,14 @@
     <Content Include="Content\css\bootstrap-theme.min.css" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\datepicker.css" />
     <Content Include="Content\css\style.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\js\detalle.js" />
     <Content Include="Content\js\libs\backbone-min.js" />
     <Content Include="Content\js\libs\backbone-relational.js" />
     <Content Include="Content\js\libs\backbone.js" />
+    <Content Include="Content\js\libs\bootstrap-datepicker.js" />
     <Content Include="Content\js\libs\bootstrap.js" />
     <Content Include="Content\js\libs\bootstrap.min.js" />
     <Content Include="Content\js\libs\backbone-min.map" />
